# eos

./: .env.example  .gitignore  LICENSE  README.md  config.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docs.yml
docker/: .env.example  docker-compose.yml
docker/mongodb/: Dockerfile  generate_keyfile.sh  init_mongodb.js  mongod.conf
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/user-guide/: campaigns.rst  color_mixing.rst  configuration.rst  devices.rst  experiments.rst  index.rst  infrastructure_setup.rst  installation.rst  jinja2_templating.rst  laboratories.rst  optimizers.rst  packages.rst  rest_api.rst  running.rst  tasks.rst
eos/: eos.py
eos/campaigns/: campaign_executor.py  campaign_executor_factory.py  campaign_manager.py  campaign_optimizer_manager.py  exceptions.py
eos/campaigns/entities/: campaign.py
eos/campaigns/repositories/: campaign_repository.py  campaign_samples_repository.py
eos/cli/: db_cli.py  orchestrator_cli.py  pkg_cli.py  web_api_cli.py
eos/configuration/: configuration_manager.py  constants.py  exceptions.py  package.py  package_manager.py  package_validator.py
eos/configuration/entities/: device_spec.py  device_specification.py  eos_config.py  experiment.py  lab.py  parameters.py  task.py  task_parameters.py  task_spec.py  task_specification.py
eos/configuration/experiment_graph/: experiment_graph.py  experiment_graph_builder.py
eos/configuration/plugin_registries/: campaign_optimizer_plugin_registry.py  device_plugin_registry.py  plugin_registry.py  task_plugin_registry.py
eos/configuration/spec_registries/: device_spec_registry.py  device_specification_registry.py  spec_registry.py  specification_registry.py  task_spec_registry.py  task_specification_registry.py
eos/configuration/validation/: container_registry.py  container_validator.py  experiment_container_registry.py  experiment_container_validator.py  experiment_validator.py  lab_validator.py  multi_lab_validator.py  task_sequence_validator.py  validation_utils.py
eos/containers/: container_manager.py  exceptions.py
eos/containers/entities/: container.py
eos/containers/repositories/: container_repository.py
eos/database/: abstract_sql_db_interface.py  alembic_commands.py  exceptions.py  file_db_interface.py  postgresql_db_interface.py  sqlite_db_interface.py
eos/database/_migrations/: alembic.ini  env.py  script.py.mako
eos/devices/: base_device.py  device_actor_references.py  device_actor_wrapper_registry.py  device_manager.py  exceptions.py
eos/devices/entities/: device.py
eos/devices/repositories/: device_repository.py
eos/experiments/: exceptions.py  experiment_executor.py  experiment_executor_factory.py  experiment_manager.py
eos/experiments/entities/: experiment.py
eos/experiments/repositories/: experiment_repository.py
eos/logging/: batch_error_logger.py  logger.py  rich_console_handler.py
eos/monitoring/: graceful_termination_monitor.py
eos/monitoring/repositories/: global_repository.py
eos/notifications/: EmailManager.py  email_manager.py
eos/optimization/: abstract_sequential_optimizer.py  exceptions.py  sequential_bayesian_optimizer.py  sequential_optimizer_actor.py
eos/orchestration/: exceptions.py  orchestrator.py
eos/orchestration/modules/: campaign_module.py  experiment_module.py  lab_module.py  loading_module.py  result_module.py  task_module.py
eos/persistence/: abstract_async_repository.py  abstract_repository.py  async_mongodb_interface.py  async_mongodb_session_factory.py  db_manager.py  file_db_interface.py  file_db_manager.py  mongo_repository.py  mongodb_async_repository.py  service_credentials.py
eos/resource_allocation/: container_allocation_manager.py  container_allocator.py  device_allocation_manager.py  device_allocator.py  exceptions.py  resource_allocation_manager.py
eos/resource_allocation/entities/: container_allocation.py  (+3 more)
eos/scheduling/: abstract_scheduler.py  basic_scheduler.py  cp_sat_scheduler.py  exceptions.py  greedy_scheduler.py
eos/tasks/: base_task.py  exceptions.py  on_demand_task_executor.py  task_executor.py  task_input_parameter_caster.py  task_input_parameter_validator.py  task_input_resolver.py  task_manager.py  task_validator.py
eos/utils/: async_rlock.py  dict_utils.py  file_utils.py  ray_utils.py
eos/web_api/: exception_handling.py
scripts/: cov_report.py  docs_build.py  docs_build_gh.py  docs_serve.py  format.py  lint.py  test.py  test_with_cov.py
tests/: conftest.py  fixtures.py  test_base_device.py  test_base_task.py  test_basic_scheduler.py  test_bayesian_sequential_optimizer.py  test_campaign_executor.py  test_config.yaml  test_config.yml  test_configuration_manager.py  test_container_allocator.py  test_container_manager.py  test_device_actor_wrapper_registry.py  test_device_allocator.py  test_device_manager.py  test_experiment_executor.py  test_experiment_manager.py  test_greedy_scheduler.py  test_lab_validation.py  test_mongodb_async_repository.py  test_on_demand_task_executor.py  test_ray_actor_wrapper.py  test_resource_allocation_manager.py  test_task_executor.py  test_task_input_parameter_validator.py  test_task_manager.py  test_task_specification_validation.py
tests/campaigns/: test_campaign_executor.py  test_campaign_manager.py
tests/configuration/: test_configuration_manager.py  test_lab_validation.py  test_multi_lab_validation.py  test_task_input_parameter_validator.py  test_task_specification_validation.py
tests/containers/: test_container_allocator.py  test_container_manager.py
tests/devices/: test_base_device.py  test_device_allocator.py  test_device_manager.py
tests/experiments/: test_experiment_executor.py  test_experiment_graph.py  test_experiment_manager.py
tests/optimization/: test_bayesian_sequential_optimizer.py
tests/resource_allocation/: test_resource_allocation_manager.py
tests/scheduling/: test_cp_sat_scheduler.py  test_greedy_scheduler.py
tests/tasks/: test_base_task.py  test_on_demand_task_executor.py  test_task_executor.py  test_task_manager.py
user/example/: README.md
(+106 files in other folders)
